--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,3 +1,4 @@
 @import "custom";
 @import "~bootstrap/scss/bootstrap";
 @import "template/template";
+@import "~datatables.net-bs4/css/dataTables.bootstrap4.css";
