--- a/templates/base-login.html.twig
+++ b/templates/base-login.html.twig
@@ -12,6 +12,7 @@
     <div class="page-wrapper">
         <!-- Preloader -->
         {#<div class="preloader"></div>#}
+        {{ include('partials/flashbag.html.twig') }}
         {% block body %}{% endblock %}
     </div>
 
