--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -4,5 +4,6 @@
 
 {% block body %}
     {{ include('layouts/banner.html.twig') }}
-    {{ include('layouts/jobsection.html.twig') }}
+    {{ include('layouts/jobSection.html.twig') }}
+    {{ include('layouts/blogSection.html.twig') }}
 {% endblock %}
