--- a/templates/layouts/banner.html.twig
+++ b/templates/layouts/banner.html.twig
@@ -5,8 +5,8 @@
             <div class="content-column col-lg-7 col-md-12 col-sm-12">
                 <div class="inner-column wow fadeInUp"  data-wow-delay="500ms">
                     <div class="title-box">
-                        <h3>There Are <span class="colored">93,178</span> Postings Here<br> For you!</h3>
-                        <div class="text">Find Jobs, Employment & Career Opportunities</div>
+                        <h3>Il y a <span class="colored">93,178</span> offres d'emploi<br> Pour vous!</h3>
+                        <div class="text">Trouver des emplois, des emplois et des opportunités de carrière</div>
                     </div>
 
                     <!-- Job Search Form -->
@@ -15,16 +15,16 @@
                             <div class="row">
                                 <div class="form-group col-lg-5 col-md-12 col-sm-12">
                                     <span class="icon flaticon-search-1"></span>
-                                    <input type="text" name="field_name" placeholder="Job title, keywords, or company">
+                                    <input type="text" name="field_name" placeholder="intitulé, mots clés, ou entreprise">
                                 </div>
                                 <!-- Form Group -->
                                 <div class="form-group col-lg-4 col-md-12 col-sm-12 location">
                                     <span class="icon flaticon-map-locator"></span>
-                                    <input type="text" name="field_name" placeholder="City or postcode">
+                                    <input type="text" name="field_name" placeholder="Ville ou Code postal">
                                 </div>
                                 <!-- Form Group -->
                                 <div class="form-group col-lg-3 col-md-12 col-sm-12 btn-box">
-                                    <button type="submit" class="theme-btn btn-style-seven"><span class="btn-title">Find Jobs</span></button>
+                                    <button type="submit" class="theme-btn btn-style-seven"><span class="btn-title">Touver un emploi</span></button>
                                 </div>
                             </div>
                         </form>
