--- a/templates/dashboard/header-dashboard.html.twig
+++ b/templates/dashboard/header-dashboard.html.twig
@@ -1,25 +1,27 @@
+<!-- Header Span -->
+<span class="header-span"></span>
+
 <!-- Main Header-->
-<header class="main-header header-style-three">
+<header class="main-header header-shaddow">
     <div class="container-fluid">
         <!-- Main box -->
         <div class="main-box">
             <!--Nav Outer -->
             <div class="nav-outer">
                 <div class="logo-box">
-                    <div class="logo"><a href="{{ path('home') }}"><img src="{{ asset('images/new-logoth.png') }}"
-                                                                        alt="" title=""></a></div>
+                    <div class="logo"><a href="{{ path('home') }}"><img src="{{ asset('images/new-logoth.png') }}" alt="" title=""></a></div>
                 </div>
 
                 <nav class="nav main-menu">
                     <ul class="navigation" id="navbar">
-                        <li class="current dropdown">
+                        <li class="dropdown">
                             <span>Home</span>
                             <ul>
                                 <li><a href="index.html">Home Page 01</a></li>
                                 <li><a href="index-2.html">Home Page 02</a></li>
                                 <li><a href="index-3.html">Home Page 03</a></li>
                                 <li><a href="index-4.html">Home Page 04</a></li>
-                                <li class="current"><a href="index-5.html">Home Page 05</a></li>
+                                <li><a href="index-5.html">Home Page 05</a></li>
                                 <li><a href="index-6.html">Home Page 06</a></li>
                                 <li><a href="index-7.html">Home Page 07</a></li>
                                 <li><a href="index-8.html">Home Page 08</a></li>
@@ -164,18 +166,18 @@
                         <li class="mm-add-listing">
                             <a href="add-listing.html" class="theme-btn btn-style-one">Job Post</a>
                             <span>
-                                <span class="contact-info">
-                                    <span class="phone-num"><span>Call us</span><a href="tel:1234567890">123 456 7890</a></span>
-                                    <span class="address">329 Queensberry Street, North Melbourne VIC <br>3051, Australia.</span>
-                                    <a href="mailto:support@superio.com" class="email">support@superio.com</a>
+                                    <span class="contact-info">
+                                        <span class="phone-num"><span>Call us</span><a href="tel:1234567890">123 456 7890</a></span>
+                                        <span class="address">329 Queensberry Street, North Melbourne VIC <br>3051, Australia.</span>
+                                        <a href="mailto:support@superio.com" class="email">support@superio.com</a>
+                                    </span>
+                                    <span class="social-links">
+                                        <a href="#"><span class="fab fa-facebook-f"></span></a>
+                                        <a href="#"><span class="fab fa-twitter"></span></a>
+                                        <a href="#"><span class="fab fa-instagram"></span></a>
+                                        <a href="#"><span class="fab fa-linkedin-in"></span></a>
+                                    </span>
                                 </span>
-                                <span class="social-links">
-                                    <a href="#"><span class="fab fa-facebook-f"></span></a>
-                                    <a href="#"><span class="fab fa-twitter"></span></a>
-                                    <a href="#"><span class="fab fa-instagram"></span></a>
-                                    <a href="#"><span class="fab fa-linkedin-in"></span></a>
-                                </span>
-                            </span>
                         </li>
                     </ul>
                 </nav>
@@ -183,16 +185,37 @@
             </div>
 
             <div class="outer-box">
-                <!-- Add Listing -->
-                <a href="{{ path('dashboard') }}" class="upload-cv"> Upload your CV</a>
-                <!-- Login/Register -->
-                <div class="btn-box">
-                    {% if app.user %}
-                        <a href="{{ path('dashboard') }}" class="theme-btn btn-style-seven">Job Post</a>
-                        <a href="{{ path('app_logout') }}" class="theme-btn btn-style-four">Logout</a>
-                    {% else %}
-                        <a href="{{ path('app_login') }}" class="theme-btn btn-style-four">Login / Register</a>
-                    {% endif %}
+
+                <button class="menu-btn">
+                    <span class="count">1</span>
+                    <span class="icon la la-heart-o"></span>
+                </button>
+
+                <button class="menu-btn">
+                    <span class="icon la la-bell"></span>
+                </button>
+
+                <!-- Dashboard Option -->
+                <div class="dropdown dashboard-option">
+                    <a class="dropdown-toggle" role="button" data-toggle="dropdown" aria-expanded="false">
+                        <img src="images/resource/company-6.png" alt="avatar" class="thumb">
+                        <span class="name">Mon compte</span>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li class="active"><a href="dashboard.html"> <i class="la la-home"></i> Dashboard</a></li>
+                        <li><a href="dashboard-company-profile.html"><i class="la la-user-tie"></i>Company Profile</a></li>
+                        <li><a href="dashboard-post-job.html"><i class="la la-paper-plane"></i>Post a New Job</a></li>
+                        <li><a href="dashboard-manage-job.html"><i class="la la-briefcase"></i> Manage Jobs </a></li>
+                        <li><a href="dashboard-applicants.html"><i class="la la-file-invoice"></i> All Applicants</a></li>
+                        <li><a href="dashboard-resumes.html"><i class="la la-bookmark-o"></i>Shortlisted Resumes</a></li>
+                        <li><a href="dashboard-packages.html"><i class="la la-box"></i>Packages</a></li>
+                        <li><a href="dashboard-messages.html"><i class="la la-comment-o"></i>Messages</a></li>
+                        <li><a href="dashboard-resume-alerts.html"><i class="la la-bell"></i>Resume Alerts</a></li>
+                        <li><a href="dashboard-change-password.html"><i class="la la-lock"></i>Change Password</a></li>
+                        <li><a href="dashboard-company-profile.html"><i class="la la-user-alt"></i>View Profile</a></li>
+                        <li><a href="{{ path('app_logout') }}"><i class="la la-sign-out"></i>Logout</a></li>
+                        <li><a href="index.html"><i class="la la-trash"></i>Delete Profile</a></li>
+                    </ul>
                 </div>
             </div>
         </div>
@@ -200,8 +223,7 @@
 
     <!-- Mobile Header -->
     <div class="mobile-header">
-        <div class="logo"><a href="{{ path('home') }}"><img src="{{ asset('images/new-logoth.png') }}" alt="" title=""></a>
-        </div>
+        <div class="logo"><a href="{{ path('home') }}"><img src="{{ asset('images/new-logoth.png') }}" alt="" title=""></a></div>
 
         <!--Nav Box-->
         <div class="nav-outer clearfix">
@@ -209,12 +231,14 @@
             <div class="outer-box">
                 <!-- Login/Register -->
                 <div class="login-box">
-                    <a href="{{ path('app_login') }}" class="call-modal"><span class="icon-user"></span></a>
+                    <a href="login-popup.html" class="call-modal"><span class="icon-user"></span></a>
                 </div>
 
+                <button id="toggle-user-sidebar"><img src="images/resource/company-6.png" alt="avatar" class="thumb"></button>
                 <a href="#nav-mobile" class="mobile-nav-toggler navbar-trigger"><span class="flaticon-menu-1"></span></a>
             </div>
         </div>
+
     </div>
 
     <!-- Mobile Nav -->
