--- a/templates/layouts/footer.html.twig
+++ b/templates/layouts/footer.html.twig
@@ -6,9 +6,9 @@
             <div class="row">
                 <div class="big-column col-xl-4 col-lg-3 col-md-12">
                     <div class="footer-column about-widget">
-                        <div class="logo"><a href="#"><img src="images/logo-2.svg" alt=""></a></div>
-                        <p class="phone-num"><span>Call us </span><a href="thebeehost@support.com">123 456 7890</a></p>
-                        <p class="address">329 Queensberry Street, North Melbourne VIC<br> 3051, Australia. <br><a href="mailto:support@superio.com" class="email">support@superio.com</a></p>
+                        <div class="logo"><a href="#"><img src="{{ asset('images/new-logoth.png') }}" alt=""></a></div>
+                        <p class="phone-num"><span>Appellez_nous </span><a href="contact@talents-handicap.com">04 97 10 01 00</a></p>
+                        <p class="address">10 avenue des tuilières<br> 06800 - Cagnes-sur-Mer <br><a href="mailto:contact@talents-handicap.com" class="email">contact@talents-handicap.com</a></p>
                     </div>
                 </div>
 
@@ -85,7 +85,7 @@
     <div class="footer-bottom">
         <div class="auto-container">
             <div class="outer-box">
-                <div class="copyright-text">© 2021 <a href="#">Superio</a>. All Right Reserved.</div>
+                <div class="copyright-text">© {{ "now"|date("Y") }} <a href="#">NewNet3D</a>. All Right Reserved.</div>
                 <div class="social-links">
                     <a href="#"><i class="fab fa-facebook-f"></i></a>
                     <a href="#"><i class="fab fa-twitter"></i></a>
