--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -3,40 +3,7 @@
 {% block title %}Log in!{% endblock %}
 
 {% block body %}
-{#<form method="post">
-    {% if error %}
-        <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-    {% endif %}
 
-    {% if app.user %}
-        <div class="mb-3">
-            You are logged in as {{ app.user.username }}, <a href="{{ path('app_logout') }}">Logout</a>
-        </div>
-    {% endif %}
-
-    <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-    <label for="inputEmail">Email</label>
-    <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
-    <label for="inputPassword">Password</label>
-    <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
-
-    <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}" >
-
-   <div class="checkbox mb-3">
-       <label>
-           <input type="checkbox" name="_remember_me">Se souvenir de moi
-       </label>
-   </div>
-
-    <div>
-        <a href="{{ path('app_forgot_password_request') }}">Réinitialiser le mot de passe</a>
-    </div>
-
-    <button class="btn btn-lg btn-primary" type="submit">
-        Sign in
-    </button>
-    <a href="{{ path('connect_google') }}" class="btn btn-lg btn-primary" type="submit">Se connecter avec google</a>
-</form>#}
     <div class="page-wrapper">
 
         {#<!-- Preloader -->
@@ -57,8 +24,11 @@
                     <div class="outer-box">
                         <!-- Login/Register -->
                         <div class="btn-box">
-                            <a href="{{ path('app_login') }}" class="theme-btn btn-style-three call-modal">Login / Register</a>
+                            {% if app.user %}
                             <a href="{{ path('dashboard') }}" class="theme-btn btn-style-one"><span class="btn-title">Job Post</span></a>
+                            {% else %}
+                            <a href="{{ path('app_login') }}" class="theme-btn btn-style-three call-modal">Login / Register</a>
+                            {% endif %}
                         </div>
                     </div>
                 </div>
@@ -141,38 +111,3 @@
         <!-- End Info Section -->
     </div><!-- End Page Wrapper -->
 {% endblock %}
-
-{#<form method="post">
-    {% if error %}
-        <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-    {% endif %}
-
-    {% if app.user %}
-        <div class="mb-3">
-            You are logged in as {{ app.user.username }}, <a href="{{ path('app_logout') }}">Logout</a>
-        </div>
-    {% endif %}
-
-    <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-    <label for="inputEmail">Email</label>
-    <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
-    <label for="inputPassword">Password</label>
-    <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
-
-    <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}" >
-
-   <div class="checkbox mb-3">
-       <label>
-           <input type="checkbox" name="_remember_me">Se souvenir de moi
-       </label>
-   </div>
-
-    <div>
-        <a href="{{ path('app_forgot_password_request') }}">Réinitialiser le mot de passe</a>
-    </div>
-
-    <button class="btn btn-lg btn-primary" type="submit">
-        Sign in
-    </button>
-    <a href="{{ path('connect_google') }}" class="btn btn-lg btn-primary" type="submit">Se connecter avec google</a>
-</form>#}
