--- a/templates/dashboard/header-dashboard.html.twig
+++ b/templates/dashboard/header-dashboard.html.twig
@@ -198,7 +198,13 @@
                 <!-- Dashboard Option -->
                 <div class="dropdown dashboard-option">
                     <a class="dropdown-toggle" role="button" data-toggle="dropdown" aria-expanded="false">
-                        <img src="images/resource/company-6.png" alt="avatar" class="thumb">
+                        {% if app.user.profile.photo %}
+                            {% for avatar in app.user.profile.photo %}
+                                {% if loop.last %}
+                                    <img src="{{ asset('uploads/' ~ avatar.nom) }}" alt="avatar" class="thumb">
+                                {% endif %}
+                            {% endfor %}
+                        {% endif %}
                         <span class="name">Mon compte</span>
                     </a>
                     <ul class="dropdown-menu">
