--- a/templates/base-dashboard.html.twig
+++ b/templates/base-dashboard.html.twig
@@ -8,7 +8,7 @@
         {% block stylesheets %}{{ encore_entry_link_tags('app') }}{% endblock %}
 
     </head>
-    <body data-anm=".anm">
+    <body>
     <div class="page-wrapper dashboard">
         <!-- Preloader -->
         {#<div class="preloader"></div>#}
