--- a/templates/base-dashboard.html.twig
+++ b/templates/base-dashboard.html.twig
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="shortcut icon" href="{{ asset('images/favicon.ico') }}" type="image/x-icon" />
+        <link rel="shortcut icon" href="{{ asset('images/favicon.png') }}" type="image/x-icon" />
         <title>{% block title %}Welcome!{% endblock %}</title>
         {% block stylesheets %}{{ encore_entry_link_tags('app') }}{% endblock %}
 
@@ -14,7 +14,13 @@
         {#<div class="preloader"></div>#}
         {{ include('dashboard/header-dashboard.html.twig') }}
         {{ include('partials/flashbag.html.twig') }}
-        {{ include('dashboard/sidebar-candidat.html.twig') }}
+        {% if app.user.isCandidat() %}
+            {{ include('dashboard/sidebar-candidat.html.twig') }}
+        {% elseif app.user.isRecruteur() %}
+            {{ include('dashboard/sidebar-recruteur.html.twig') }}
+        {% elseif app.user.isSuperAdmin() %}
+            {{ include('dashboard/sidebar-admin.html.twig') }}
+        {% endif %}
         {% block body %}
 
         {% endblock %}
