--- a/templates/dashboard/header-dashboard.html.twig
+++ b/templates/dashboard/header-dashboard.html.twig
@@ -9,7 +9,7 @@
             <!--Nav Outer -->
             <div class="nav-outer">
                 <div class="logo-box">
-                    <div class="logo"><a href="{{ path('home') }}"><img src="{{ asset('images/new-logoth.png') }}" alt="" title=""></a></div>
+                    <div class="logo"><a href="{{ path('home') }}"><img src="{{ asset('images/logoTH.svg') }}" alt="" title=""></a></div>
                 </div>
 
                 <nav class="nav main-menu">
@@ -198,14 +198,16 @@
                 <!-- Dashboard Option -->
                 <div class="dropdown dashboard-option">
                     <a class="dropdown-toggle" role="button" data-toggle="dropdown" aria-expanded="false">
-                        {% if user.profile.photo %}
-                            {% for avatar in user.profile.photo %}
+
+                        {% if app.user.profile and app.user.profile.photo|length %}
+                            {% for avatar in app.user.profile.photo %}
                                 {% if loop.last %}
                                     <img src="{{ asset('uploads/' ~ avatar.nom) }}" alt="avatar" class="thumb">
-                                {% else %}
-                                    <img src="{{ asset('uploads/avatar.png') }}" alt="avatar" class="thumb">
+
                                 {% endif %}
                             {% endfor %}
+                        {% else %}
+                            <img src="{{ asset('uploads/avatar.png') }}" alt="avatar" class="thumb">
                         {% endif %}
                         <span class="name">Mon compte</span>
                     </a>
@@ -231,7 +233,7 @@
 
     <!-- Mobile Header -->
     <div class="mobile-header">
-        <div class="logo"><a href="{{ path('home') }}"><img src="{{ asset('images/new-logoth.png') }}" alt="" title=""></a></div>
+        <div class="logo"><a href="{{ path('home') }}"><img src="{{ asset('images/logoTH.svg.png') }}" alt="" title=""></a></div>
 
         <!--Nav Box-->
         <div class="nav-outer clearfix">
