--- a/templates/dashboard/sidebar-candidat.html.twig
+++ b/templates/dashboard/sidebar-candidat.html.twig
@@ -6,12 +6,14 @@
     <div class="sidebar-inner">
         <ul class="navigation">
             <li class="active"><a href="{{ path('dashboard') }}"> <i class="la la-home"></i> Dashboard</a></li>
-            <li><a href="{{ path('user_profile_edit', {'id': app.user.profile.id}) }}"><i class="la la-user-tie"></i>My Profile</a></li>
+            <li>{% if app.user.profile %}<a href="{{ path('user_profile_edit', {'id': app.user.profile.id}) }}"><i class="la la-user-tie"></i>My Profile</a>
+                {% else %}<a href="{{ path('profile_new') }}"><i class="la la-user-tie"></i>Créer mon profile</a>{% endif %}
+            </li>
             <li><a href="candidate-dashboard-resume.html"><i class="la la-file-invoice"></i>My Resume</a></li>
             <li><a href="candidate-dashboard-applied-job.html"><i class="la la-briefcase"></i> Applied Jobs </a></li>
             <li><a href="candidate-dashboard-job-alerts.html"><i class="la la-bell"></i>Job Alerts</a></li>
             <li><a href="candidate-dashboard-shortlisted-resume.html"><i class="la la-bookmark-o"></i>Shortlisted Jobs</a></li>
-            <li><a href="candidate-dashboard-cv-manager.html"><i class="la la-file-invoice"></i> CV manager</a></li>
+            <li><a href="{{ path('cv_show_utilisateur', {'id': app.user.id}) }}"><i class="la la-file-invoice"></i> Mon CV</a></li>
             <li><a href="dashboard-packages.html"><i class="la la-box"></i>Packages</a></li>
             <li><a href="dashboard-messages.html"><i class="la la-comment-o"></i>Messages</a></li>
             <li><a href="dashboard-change-password.html"><i class="la la-lock"></i>Change Password</a></li>
