--- a/templates/layouts/footer.html.twig
+++ b/templates/layouts/footer.html.twig
@@ -6,7 +6,7 @@
             <div class="row">
                 <div class="big-column col-xl-4 col-lg-3 col-md-12">
                     <div class="footer-column about-widget">
-                        <div class="logo"><a href="#"><img src="{{ asset('images/new-logoth.png') }}" alt=""></a></div>
+                        <div class="logo"><a href="#"><img src="{{ asset('images/logoTH.svg') }}" alt=""></a></div>
                         <p class="phone-num"><span>Appellez_nous </span><a href="contact@talents-handicap.com">04 97 10 01 00</a></p>
                         <p class="address">10 avenue des tuilières<br> 06800 - Cagnes-sur-Mer <br><a href="mailto:contact@talents-handicap.com" class="email">contact@talents-handicap.com</a></p>
                     </div>
