--- a/templates/layouts/header.html.twig
+++ b/templates/layouts/header.html.twig
@@ -6,8 +6,7 @@
             <!--Nav Outer -->
             <div class="nav-outer">
                 <div class="logo-box">
-                    <div class="logo"><a href="{{ path('home') }}"><img src="{{ asset('images/new-logoth.png') }}"
-                                                                        alt="" title=""></a></div>
+                    <div class="logo"><a href="{{ path('home') }}"><img src="{{ asset('images/logoTH.svg') }}" alt="" title=""></a></div>
                 </div>
 
                 <nav class="nav main-menu">
@@ -184,11 +183,13 @@
 
             <div class="outer-box">
                 <!-- Add Listing -->
-                <a href="{{ path('dashboard') }}" class="upload-cv"> Upload your CV</a>
+                {% if app.user and app.user.isCandidat() %}
+                <a href="{{ path('file_new_cv') }}" class="upload-cv"> Upload your CV</a>
+                {% endif %}
                 <!-- Login/Register -->
                 <div class="btn-box">
                     {% if app.user %}
-                        <a href="{{ path('dashboard') }}" class="theme-btn btn-style-seven">Job Post</a>
+                        <a href="{{ path('dashboard') }}" class="theme-btn btn-style-seven">Dashboard</a>
                         <a href="{{ path('app_logout') }}" class="theme-btn btn-style-four">Logout</a>
                     {% else %}
                         <a href="{{ path('app_login') }}" class="theme-btn btn-style-four">Login / Register</a>
@@ -200,7 +201,7 @@
 
     <!-- Mobile Header -->
     <div class="mobile-header">
-        <div class="logo"><a href="{{ path('home') }}"><img src="{{ asset('images/new-logoth.png') }}" alt="" title=""></a>
+        <div class="logo"><a href="{{ path('home') }}"><img src="{{ asset('images/logoTH.svg') }}" alt="" title=""></a>
         </div>
 
         <!--Nav Box-->
