--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -17,7 +17,7 @@
                     <!--Nav Outer -->
                     <div class="nav-outer">
                         <div class="logo-box">
-                            <div class="logo"><a href="{{ path('home') }}"><img src="{{ asset('images/new-logoth.png') }}" alt="" title=""></a></div>
+                            <div class="logo"><a href="{{ path('home') }}"><img src="{{ asset('images/logoTH.svg') }}" alt="" title=""></a></div>
                         </div>
                     </div>
 
@@ -36,7 +36,7 @@
 
             <!-- Mobile Header -->
             <div class="mobile-header">
-                <div class="logo"><a href="{{ path('home') }}"><img src="{{ asset('images/new-logoth.png') }}" alt="" title=""></a></div>
+                <div class="logo"><a href="{{ path('home') }}"><img src="{{ asset('images/logoTH.svg') }}" alt="" title=""></a></div>
             </div>
 
             <!-- Mobile Nav -->
