--- a/templates/reset_password/request.html.twig
+++ b/templates/reset_password/request.html.twig
@@ -17,7 +17,7 @@
                     <!--Nav Outer -->
                     <div class="nav-outer">
                         <div class="logo-box">
-                            <div class="logo"><a href="{{ path('home') }}"><img src="{{ asset('images/new-logoth.png') }}" alt="" title=""></a></div>
+                            <div class="logo"><a href="{{ path('home') }}"><img src="{{ asset('images/logoTH.svg') }}" alt="" title=""></a></div>
                         </div>
                     </div>
 
@@ -36,7 +36,7 @@
 
             <!-- Mobile Header -->
             <div class="mobile-header">
-                <div class="logo"><a href="{{ path('home') }}"><img src="{{ asset('images/new-logoth.png') }}" alt="" title=""></a></div>
+                <div class="logo"><a href="{{ path('home') }}"><img src="{{ asset('images/logoTH.svg') }}" alt="" title=""></a></div>
             </div>
 
             <!-- Mobile Nav -->
@@ -46,7 +46,7 @@
 
         <!-- Info Section -->
         <div class="login-section">
-            <div class="image-layer" style="background-image: url('images/background/12.jpg');"></div>
+            <div class="image-layer" style="background-image: url('/images/background/12.jpg');"></div>
             <div class="outer-box">
                 <!-- reset Form -->
                 <div class="login-form default-form">
