--- a/templates/dashboard/header-dashboard.html.twig
+++ b/templates/dashboard/header-dashboard.html.twig
@@ -233,7 +233,7 @@
 
     <!-- Mobile Header -->
     <div class="mobile-header">
-        <div class="logo"><a href="{{ path('home') }}"><img src="{{ asset('images/logoTH.svg.png') }}" alt="" title=""></a></div>
+        <div class="logo"><a href="{{ path('home') }}"><img src="{{ asset('images/logoTH.svg') }}" alt="" title=""></a></div>
 
         <!--Nav Box-->
         <div class="nav-outer clearfix">
@@ -244,7 +244,7 @@
                     <a href="login-popup.html" class="call-modal"><span class="icon-user"></span></a>
                 </div>
 
-                <button id="toggle-user-sidebar"><img src="images/resource/company-6.png" alt="avatar" class="thumb"></button>
+                <button id="toggle-user-sidebar"><img src="{{ asset('images/resource/company-6.png') }}" alt="avatar" class="thumb"></button>
                 <a href="#nav-mobile" class="mobile-nav-toggler navbar-trigger"><span class="flaticon-menu-1"></span></a>
             </div>
         </div>
