--- a/templates/file/new_cv.html.twig
+++ b/templates/file/new_cv.html.twig
@@ -16,20 +16,9 @@
                     <div class="cv-manager-widget ls-widget">
                         <div class="widget-title"><h4>Cv Manager</h4></div>
                         <div class="widget-content">
-                            <div class="uploading-resume">
-                                <div class="uploadButton">
-                                    <input class="uploadButton-input" type="file"  name="attachments[]" accept="image/*, application/pdf" id="upload" multiple/>
-                                    <label class="cv-uploadButton" for="upload">
-                                        <span class="title">Drop files here to upload</span>
-                                        <span class="text">To upload file size is (Max 5Mb) and allowed file types are (.doc, .docx, .pdf)</span>
-                                        <span class="theme-btn btn-style-one">Upload Resume</span>
-                                    </label>
-                                    <span class="uploadButton-file-name"></span>
-                                </div>
-                            </div>
-
+                            <div class="mb-3">
                             {{ include('file/_cv_form.html.twig') }}
-
+                            </div>
                             <div class="files-outer">
                                 {% for cv in cVCandidat %}
                                     <div class="file-edit-box">
