--- a/templates/dashboard/sidebar-candidat.html.twig
+++ b/templates/dashboard/sidebar-candidat.html.twig
@@ -13,7 +13,7 @@
             <li><a href="candidate-dashboard-applied-job.html"><i class="la la-briefcase"></i> Applied Jobs </a></li>
             <li><a href="candidate-dashboard-job-alerts.html"><i class="la la-bell"></i>Job Alerts</a></li>
             <li><a href="candidate-dashboard-shortlisted-resume.html"><i class="la la-bookmark-o"></i>Shortlisted Jobs</a></li>
-            <li><a href="{{ path('cv_show_utilisateur', {'id': app.user.id}) }}"><i class="la la-file-invoice"></i> Mon CV</a></li>
+            <li><a href="{{ path('file_index') }}"><i class="la la-file-invoice"></i> Mon CV</a></li>
             <li><a href="dashboard-packages.html"><i class="la la-box"></i>Packages</a></li>
             <li><a href="dashboard-messages.html"><i class="la la-comment-o"></i>Messages</a></li>
             <li><a href="dashboard-change-password.html"><i class="la la-lock"></i>Change Password</a></li>
