--- a/templates/file/_cv_form.html.twig
+++ b/templates/file/_cv_form.html.twig
@@ -1,5 +1,5 @@
 {{ form_start(form) }}
-    {{ form_widget(form.cV) }}
-    {{ form_widget(form.NomLibre) }}
-    <button class="theme-btn btn-style-one small">{{ button_label|default('Save') }}</button>
+<div class="mb-2">{{ form_widget(form.cV) }}</div>
+<div class="mb-2">{{ form_widget(form.NomLibre) }}</div>
+<button class="theme-btn btn-style-one small">{{ button_label|default('Enregistrer') }}</button>
 {{ form_end(form, {'render_rest': false}) }}
