--- a/templates/dashboard/header-dashboard.html.twig
+++ b/templates/dashboard/header-dashboard.html.twig
@@ -9,7 +9,7 @@
             <!--Nav Outer -->
             <div class="nav-outer">
                 <div class="logo-box">
-                    <div class="logo"><a href="{{ path('home') }}"><img src="{{ asset('images/logoTH.svg') }}" alt="" title=""></a></div>
+                    <div class="logo"><a href="{{ path('home') }}"><img src="{{ asset('images/new-logoth.png') }}" alt="" title=""></a></div>
                 </div>
 
                 <nav class="nav main-menu">
