--- a/templates/base-dashboard.html.twig
+++ b/templates/base-dashboard.html.twig
@@ -24,7 +24,7 @@
         {% block body %}
 
         {% endblock %}
-        {{ include('layouts/footer.html.twig') }}
+        {{ include('dashboard/footer-dashboard.html.twig') }}
     </div>
 
     {% block javascripts %}{{ encore_entry_script_tags('app') }}{% endblock %}
