--- a/templates/layouts/footer.html.twig
+++ b/templates/layouts/footer.html.twig
@@ -85,7 +85,7 @@
     <div class="footer-bottom">
         <div class="auto-container">
             <div class="outer-box">
-                <div class="copyright-text">© {{ "now"|date("Y") }} <a href="#">NewNet3D</a>. All Right Reserved.</div>
+                <div class="copyright-text">© {{ "now"|date("Y") }} <a href="#">NewNet3D</a>. Tous droits réservés.</div>
                 <div class="social-links">
                     <a href="#"><i class="fab fa-facebook-f"></i></a>
                     <a href="#"><i class="fab fa-twitter"></i></a>
