--- a/templates/file/cvtheque.html.twig
+++ b/templates/file/cvtheque.html.twig
@@ -93,7 +93,10 @@
                                         <span class="company-logo"><img src="{{ asset('/uploads/' ~ profile.photo.last().nom) }}" alt=""></span>
                                         <h4><a href="{{ path('profile_show', {'id': profile.id}) }}">{{ profile.getUser.fullname|capitalize }}</a></h4>
                                         <ul class="job-info">
-                                            <li><span class="icon flaticon-briefcase"></span></li>
+                                            {% if profile.cv|length %}
+                                            <li><a href="{{ asset('/uploads/' ~ profile.cv.last().nom) }}" title="Telecharger {{ profile.cv.last().getNomFichier() }}"><span class="icon flaticon-briefcase"></span>
+                                                </a></li>
+                                            {% endif %}
                                             <li><span class="icon flaticon-map-locator"></span> London, UK</li>
                                             <li><span class="icon flaticon-clock-3"></span> Mise à jour : {{ profile.updatedAt|date('d-m-Y')}} </li>
                                             <li><span class="icon flaticon-money"></span> $35k - $45k</li>
