--- a/templates/dashboard/sidebar-admin.html.twig
+++ b/templates/dashboard/sidebar-admin.html.twig
@@ -8,13 +8,14 @@
             <li class="active"><a href="{{ path('dashboard') }}"> <i class="la la-home"></i> Dashboard</a></li>
             <li><a href="{{ path('user_index') }}"><i class="la la-user-tie"></i>Utilisateurs</a></li>
             <li><a href="{{ path('dictionnaire_index') }}"><i class="la la-paper-plane"></i>Dictionnaire</a></li>
+            <li><a href="{{ path('entreprise_index') }}"><i class="la la-building"></i>Entreprises</a></li>
             <li><a href="dashboard-manage-job.html"><i class="la la-briefcase"></i> Offres d'emploi </a></li>
             <li><a href="dashboard-applicants.html"><i class="la la-file-invoice"></i> Candidatures</a></li>
             <li><a href="{{ path('cvtheque') }}"><i class="la la-bookmark-o"></i>CVthèque</a></li>
             <li><a href="dashboard-packages.html"><i class="la la-box"></i>Offres commerciales</a></li>
-            <li><a href="dashboard-messages.html"><i class="la la-comment-o"></i>Messages</a></li>
-            <li><a href="dashboard-resume-alerts.html"><i class="la la-bell"></i>Resume Alerts</a></li>
-            <li><a href="dashboard-change-password.html"><i class="la la-lock"></i>Changer le mo</a></li>
+            <li><a href="{{ path('forum_index') }}"><i class="la la-comment-o"></i>Forums</a></li>
+            <li><a href="{{ path('stand_index') }}"><i class="la la-bell"></i>Stands</a></li>
+            <li><a href="{{ path('pavillon_index') }}"><i class="la la-lock"></i>Pavillons</a></li>
             <li><a href=""><i class="la la-user-alt"></i>View Profile</a></li>
             <li><a href="{{ path('app_logout') }}"><i class="la la-sign-out"></i>Logout</a></li>
             <li><a href=""><i class="la la-trash"></i>Delete Profile</a></li>
