--- a/templates/dashboard/sidebar-candidat.html.twig
+++ b/templates/dashboard/sidebar-candidat.html.twig
@@ -9,17 +9,17 @@
             <li>{% if app.user.profile %}<a href="{{ path('user_profile_edit', {'id': app.user.profile.id}) }}"><i class="la la-user-tie"></i>Mon profile</a>
                 {% else %}<a href="{{ path('profile_new') }}"><i class="la la-user-tie"></i>Créer mon profile</a>{% endif %}
             </li>
-            <li><a href="candidate-dashboard-resume.html"><i class="la la-file-invoice"></i>My Resume</a></li>
-            <li><a href="candidate-dashboard-applied-job.html"><i class="la la-briefcase"></i> Applied Jobs </a></li>
-            <li><a href="candidate-dashboard-job-alerts.html"><i class="la la-bell"></i>Job Alerts</a></li>
-            <li><a href="candidate-dashboard-shortlisted-resume.html"><i class="la la-bookmark-o"></i>Shortlisted Jobs</a></li>
+            <li><a href="candidate-dashboard-resume.html"><i class="la la-file-invoice"></i>Mes rendez-vous</a></li>
+            <li><a href="candidate-dashboard-applied-job.html"><i class="la la-briefcase"></i>Mes offres d'emploi</a></li>
+            <li><a href="candidate-dashboard-job-alerts.html"><i class="la la-bell"></i>Ma sélection</a></li>
             <li><a href="{{ path('file_index') }}"><i class="la la-file-invoice"></i> Mon CV</a></li>
-            <li><a href="dashboard-packages.html"><i class="la la-box"></i>Packages</a></li>
-            <li><a href="dashboard-messages.html"><i class="la la-comment-o"></i>Messages</a></li>
-            <li><a href="dashboard-change-password.html"><i class="la la-lock"></i>Change Password</a></li>
-            <li><a href="dashboard-profile.html"><i class="la la-user-alt"></i>View Profile</a></li>
-            <li><a href="{{ path('app_logout') }}"><i class="la la-sign-out"></i>Logout</a></li>
-            <li><a href="dashboard-delete.html"><i class="la la-trash"></i>Delete Profile</a></li>
+            {#<li><a href="dashboard-packages.html"><i class="la la-box"></i>Packages</a></li>
+            <li><a href="candidate-dashboard-shortlisted-resume.html"><i class="la la-bookmark-o"></i>Shortlisted Jobs</a></li>
+            <li><a href="dashboard-messages.html"><i class="la la-comment-o"></i>Messages</a></li>#}
+            <li><a href="dashboard-change-password.html"><i class="la la-lock"></i>Mot de passe</a></li>
+            {#<li><a href="dashboard-profile.html"><i class="la la-user-alt"></i>View Profile</a></li>#}
+            <li><a href="{{ path('app_logout') }}"><i class="la la-sign-out"></i>Déconnexion</a></li>
+            <li><a href="dashboard-delete.html"><i class="la la-trash"></i>Supprimer mon compte</a></li>
         </ul>
 
         <div class="skills-percentage">
