--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,4 +1,5 @@
 @import "custom";
 @import "~bootstrap/scss/bootstrap";
+@import "multi_step_form";
 @import "template/template";
 @import "~datatables.net-bs4/css/dataTables.bootstrap4.css";
