--- a/templates/file/cvtheque.html.twig
+++ b/templates/file/cvtheque.html.twig
@@ -90,7 +90,11 @@
                             <div class="job-block-two col-lg-12">
                                 <div class="inner-box">
                                     <div class="content">
+                                        {% if profile.photo %}
                                         <span class="company-logo"><img src="{{ asset('/uploads/' ~ profile.photo.last().nom) }}" alt=""></span>
+                                        {% else %}
+                                            <span class="company-logo"><img src="{{ asset('uploads/avatar.png') }}">
+                                        {% endif %}
                                         <h4><a href="{{ path('profile_show', {'id': profile.id}) }}">{{ profile.getUser.fullname|capitalize }}</a></h4>
                                         <ul class="job-info">
                                             {% if profile.cv|length %}
