--- a/templates/base-dashboard.html.twig
+++ b/templates/base-dashboard.html.twig
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="shortcut icon" href="{{ asset('images/favicon.png') }}" type="image/x-icon" />
         <title>{% block title %}Welcome!{% endblock %}</title>
+        <link href="https://cdn.jsdelivr.net/npm/tom-select@2.0.0-rc.4/dist/css/tom-select.css" rel="stylesheet">
         {% block stylesheets %}{{ encore_entry_link_tags('app') }}{% endblock %}
 
     </head>
