--- a/templates/dashboard/sidebar-admin.html.twig
+++ b/templates/dashboard/sidebar-admin.html.twig
@@ -12,7 +12,7 @@
             <li><a href="dashboard-manage-job.html"><i class="la la-briefcase"></i> Offres d'emploi </a></li>
             <li><a href="dashboard-applicants.html"><i class="la la-file-invoice"></i> Candidatures</a></li>
             <li><a href="{{ path('cvtheque') }}"><i class="la la-bookmark-o"></i>CVthèque</a></li>
-            <li><a href="dashboard-packages.html"><i class="la la-box"></i>Offres commerciales</a></li>
+            <li><a href="{{ path('blog_index') }}"><i class="la la-box"></i>Actualités</a></li>
             <li><a href="{{ path('forum_index') }}"><i class="la la-comment-o"></i>Forums</a></li>
             <li><a href="{{ path('stand_index') }}"><i class="la la-bell"></i>Stands</a></li>
             <li><a href="{{ path('pavillon_index') }}"><i class="la la-lock"></i>Pavillons</a></li>
