--- a/assets/styles/custom.scss
+++ b/assets/styles/custom.scss
@@ -42,6 +42,10 @@
 #forum_dateOuverture_time_hour,
 #profile_dateNaissance_time_hour,
 #forum_dateFermeture_time_hour,
+#cv_formation_debut_time_hour,
+#cv_experience_debut_time_hour,
+#cv_formation_fin_time_hour,
+#cv_experience_fin_time_hour,
 #forum_date_fermeture_candidature_time_hour{
   display: none;
 }
