--- a/templates/layouts/footer.html.twig
+++ b/templates/layouts/footer.html.twig
@@ -96,6 +96,7 @@
         </div>
     </div>
 
-    <div class="scroll-to-top scroll-to-target style-two" data-target="html"><span class="fa fa-angle-up"></span></div>
+    <!-- Scroll To Top -->
+    <div class="scroll-to-top scroll-to-target" data-target="html"><span class="fa fa-angle-up"></span></div>
 </footer>
 <!-- End Main Footer -->
