--- a/templates/dashboard/sidebar-admin.html.twig
+++ b/templates/dashboard/sidebar-admin.html.twig
@@ -9,7 +9,7 @@
             <li><a href="{{ path('user_index') }}"><i class="la la-user-tie"></i>Utilisateurs</a></li>
             <li><a href="{{ path('dictionnaire_index') }}"><i class="la la-paper-plane"></i>Dictionnaire</a></li>
             <li><a href="{{ path('entreprise_index') }}"><i class="la la-building"></i>Entreprises</a></li>
-            <li><a href="dashboard-manage-job.html"><i class="la la-briefcase"></i> Offres d'emploi </a></li>
+            <li><a href="{{ path('annonce_index') }}"><i class="la la-briefcase"></i> Offres d'emploi </a></li>
             <li><a href="dashboard-applicants.html"><i class="la la-file-invoice"></i> Candidatures</a></li>
             <li><a href="{{ path('cvtheque') }}"><i class="la la-bookmark-o"></i>CVthèque</a></li>
             <li><a href="{{ path('blog_index') }}"><i class="la la-box"></i>Actualités</a></li>
